hphp/test/zend/good/Zend/tests/exception_handler_006.php.expectf
Fatal error: Uncaught exception 'Exception' with message '' in %s/exception_handler_006.php:17
Stack trace:
%a {main}
string(24) "foo(): Exception thrown!"
